[gd_scene load_steps=48 format=3 uid="uid://1sjb2n1bv5vr"]

[ext_resource type="Script" path="res://Towers/Water/water_tower.gd" id="1_5ikn8"]
[ext_resource type="Texture2D" uid="uid://cndm3xw3afebv" path="res://Assets/Sprites/Towers/towerDefense_tile203.png" id="2_bbixo"]
[ext_resource type="Texture2D" uid="uid://cwu2w2vvdb12e" path="res://Assets/Sprites/Towers/towerDefense_tile204.png" id="3_e30aq"]
[ext_resource type="Script" path="res://Towers/Wind/TowerRangePreview.gd" id="4_maxca"]
[ext_resource type="FontFile" uid="uid://cgdbdkkr85xtx" path="res://Assets/Fonts/kenvector_future_thin.ttf" id="5_sckd6"]
[ext_resource type="Texture2D" uid="uid://bxs8mqmnhu6q8" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40000.png" id="5_sqpbi"]
[ext_resource type="Texture2D" uid="uid://bh8lxb1pyhkc1" path="res://Assets/Ui/Art/bin.png" id="6_63ttp"]
[ext_resource type="Texture2D" uid="uid://coftt6ew8iqsj" path="res://Assets/Ui/Art/sword.png" id="6_gdsyx"]
[ext_resource type="Texture2D" uid="uid://b1p4p4ld58x7l" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40001.png" id="6_s1kjh"]
[ext_resource type="Script" path="res://Singletons/AttackTBar.gd" id="6_stewh"]
[ext_resource type="Texture2D" uid="uid://d0vcelp6hhj2q" path="res://Assets/Ui/Art/range.png" id="7_120wm"]
[ext_resource type="Texture2D" uid="uid://cqhs4tf78di61" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40002.png" id="7_eetvt"]
[ext_resource type="Texture2D" uid="uid://3nabf28xueny" path="res://Assets/Ui/Art/catapult.png" id="7_kagf0"]
[ext_resource type="Texture2D" uid="uid://b2tn7g2pmu0pv" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40003.png" id="8_6slml"]
[ext_resource type="Texture2D" uid="uid://b1q2lof3finbc" path="res://Assets/Ui/Art/bow.png" id="8_etxti"]
[ext_resource type="Script" path="res://Mobs/Adds/HealthBar.gd" id="9_b1jgs"]
[ext_resource type="Texture2D" uid="uid://btgdkp7lje2l0" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40004.png" id="9_ug26o"]
[ext_resource type="Texture2D" uid="uid://c742i0dirx8vq" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40005.png" id="10_eafxj"]
[ext_resource type="Texture2D" uid="uid://cyoctsh8nsr6t" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40006.png" id="11_uymeq"]
[ext_resource type="Texture2D" uid="uid://djagkm5uqitrb" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40007.png" id="12_fmyo7"]
[ext_resource type="Texture2D" uid="uid://do7i7unbp0n6m" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40008.png" id="13_bosna"]
[ext_resource type="Texture2D" uid="uid://cnrdccukxgtru" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40009.png" id="14_dtpf0"]
[ext_resource type="Texture2D" uid="uid://bsqjeyu3seew1" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40010.png" id="15_vtboy"]
[ext_resource type="Texture2D" uid="uid://c7ssmldcq1bbi" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40011.png" id="16_egb0g"]
[ext_resource type="Texture2D" uid="uid://c680537xdxmyu" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40012.png" id="17_1qmjt"]
[ext_resource type="Texture2D" uid="uid://djrbw4psxhs0e" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40013.png" id="18_rb812"]
[ext_resource type="Texture2D" uid="uid://c5t0qt1pmwhpx" path="res://Assets/Sprites/Free-Animated-Explosions/WaterSplash/Images/water40014.png" id="19_7204q"]
[ext_resource type="Texture2D" uid="uid://bbexl7g7y2a4j" path="res://Assets/Ui/Art/Empty.png" id="20_jv67o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2unwm"]
resource_local_to_scene = true
radius = 45.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbufd"]
bg_color = Color(0.821607, 0.0549877, 0.200025, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70w4w"]
bg_color = Color(0.72453, 0.356289, 0.930381, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="SpriteFrames" id="SpriteFrames_tmj1s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_sqpbi")
}, {
"duration": 1.0,
"texture": ExtResource("6_s1kjh")
}, {
"duration": 1.0,
"texture": ExtResource("7_eetvt")
}, {
"duration": 1.0,
"texture": ExtResource("8_6slml")
}, {
"duration": 1.0,
"texture": ExtResource("9_ug26o")
}, {
"duration": 1.0,
"texture": ExtResource("10_eafxj")
}, {
"duration": 1.0,
"texture": ExtResource("11_uymeq")
}, {
"duration": 1.0,
"texture": ExtResource("12_fmyo7")
}, {
"duration": 1.0,
"texture": ExtResource("13_bosna")
}, {
"duration": 1.0,
"texture": ExtResource("14_dtpf0")
}, {
"duration": 1.0,
"texture": ExtResource("15_vtboy")
}, {
"duration": 1.0,
"texture": ExtResource("16_egb0g")
}, {
"duration": 1.0,
"texture": ExtResource("17_1qmjt")
}, {
"duration": 1.0,
"texture": ExtResource("18_rb812")
}, {
"duration": 1.0,
"texture": ExtResource("19_7204q")
}, {
"duration": 1.0,
"texture": ExtResource("20_jv67o")
}],
"loop": false,
"name": &"explode",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ro21e"]
size = Vector2(5.93971, 5.57547)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8710"]
size = Vector2(56, 43.0769)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b33wi"]
bg_color = Color(0.214404, 0.639255, 0.887249, 0.45098)
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.827451)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06jtv"]
bg_color = Color(0.243137, 0.470588, 0.694118, 0.537255)
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.819608, 0.360784, 0.0823529, 0.8)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5ckj"]
bg_color = Color(0.745098, 0.133333, 0.0980392, 0.827451)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.596936, 0.0421845, 0.0425374, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_br7va"]
bg_color = Color(0.92756, 0.204587, 0.156606, 0.827451)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.596078, 0.0431373, 0.0431373, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7p8p"]
bg_color = Color(0.544719, 0.0832642, 0.0573227, 0.827451)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.596078, 0.0431373, 0.0431373, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4p86"]
bg_color = Color(0, 0.731401, 0.213719, 1)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.000693897, 0.000693898, 0.000693897, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yx1fn"]
bg_color = Color(6.01634e-06, 0.883626, 0.262623, 1)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edu57"]
bg_color = Color(0, 0.415905, 0.10435, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efktd"]
bg_color = Color(0.137255, 0.345098, 0.694118, 0.576471)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2niu2"]
bg_color = Color(0.9725, 0.260386, 0.163366, 0.788235)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0363896, 0.430395, 0.597016, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n770"]
bg_color = Color(0.027451, 0.25098, 0.478431, 0.580392)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0352941, 0.431373, 0.596078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_440rt"]
bg_color = Color(0.772549, 0.105882, 0.247059, 0.780392)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w7gv6"]
bg_color = Color(0.283263, 0.884305, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="WaterTower" type="StaticBody2D"]
light_mask = 2
visibility_layer = 3
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource("1_5ikn8")
damage = 20
maxHealth = 20.0

[node name="UnloadedSprite" type="Sprite2D" parent="."]
light_mask = 2
visibility_layer = 2
rotation = 1.5708
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_bbixo")

[node name="LoadedSprite" type="Sprite2D" parent="."]
visible = false
light_mask = 2
visibility_layer = 2
rotation = 1.5708
scale = Vector2(1.3, 1.3)
texture = ExtResource("3_e30aq")

[node name="Explosion" type="Area2D" parent="."]
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="Explosion"]
shape = SubResource("CircleShape2D_2unwm")

[node name="Area" type="Panel" parent="Explosion"]
modulate = Color(0.72549, 0, 0, 0.490196)
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(45, 45)
theme_override_styles/panel = SubResource("StyleBoxFlat_dbufd")
script = ExtResource("4_maxca")

[node name="AreaUpgraded" type="Panel" parent="Explosion"]
visible = false
modulate = Color(0.516072, 0.169633, 0.728865, 0.521569)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(45, 45)
theme_override_styles/panel = SubResource("StyleBoxFlat_70w4w")
script = ExtResource("4_maxca")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Explosion"]
z_as_relative = false
scale = Vector2(0.141133, 0.254729)
sprite_frames = SubResource("SpriteFrames_tmj1s")
animation = &"explode"

[node name="TowerDetection" type="Area2D" parent="."]
process_mode = 3
scale = Vector2(1.3, 1.3)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerDetection"]
position = Vector2(-0.249997, -1.43051e-06)
scale = Vector2(13.3009, -12.9137)
shape = SubResource("RectangleShape2D_ro21e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.999998)
scale = Vector2(1.3, 1.3)
shape = SubResource("RectangleShape2D_j8710")

[node name="BulletContainer" type="Node" parent="."]

[node name="UpgradeNode" type="Node" parent="."]

[node name="Panel" type="Panel" parent="UpgradeNode"]
visible = false
offset_left = 7.0
offset_top = 110.0
offset_right = 47.0
offset_bottom = 150.0
scale = Vector2(5, -3.524)
pivot_offset = Vector2(26.7416, 22.852)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_b33wi")

[node name="HBox" type="HBoxContainer" parent="UpgradeNode/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.625
offset_top = -13.2263
offset_right = 24.375
offset_bottom = 26.7737
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.790851, 0.406084)
pivot_offset = Vector2(21.8789, 20.3065)

[node name="Upgrade1" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_06jtv")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade1"]
position = Vector2(6.61813, 20.2582)

[node name="p" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade1"]
layout_mode = 0
offset_left = 4.58715
offset_top = 9.80733
offset_right = 22.5871
offset_bottom = 27.8073
scale = Vector2(0.185449, -0.556406)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_sckd6")
theme_override_font_sizes/font_size = 15
text = "15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="n" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade1"]
layout_mode = 0
offset_left = 3.2
offset_top = 39.0
offset_right = 73.2
offset_bottom = 62.0
scale = Vector2(0.09, -0.3)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_sckd6")
text = "Damage"

[node name="Sprite2D2" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade1"]
position = Vector2(6, 20)
rotation = -4.90438
scale = Vector2(0.028, 0.021)
texture = ExtResource("6_gdsyx")

[node name="Sprite2D3" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade1"]
position = Vector2(6, 20)
rotation = 1.74533
scale = Vector2(0.028, 0.021)
texture = ExtResource("6_gdsyx")

[node name="Upgrade2" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_06jtv")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade2"]
position = Vector2(6.55356, 20.0094)

[node name="p" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade2"]
layout_mode = 0
offset_left = 4.52257
offset_top = 9.55852
offset_right = 22.5226
offset_bottom = 27.5585
scale = Vector2(0.185449, -0.556406)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_sckd6")
theme_override_font_sizes/font_size = 15
text = "15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D2" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade2"]
position = Vector2(5.80225, 18.875)
rotation = 3.14159
scale = Vector2(0.0154937, 0.0460799)
texture = ExtResource("7_120wm")

[node name="n" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade2"]
layout_mode = 0
offset_left = 3.52622
offset_top = 39.1402
offset_right = 60.5262
offset_bottom = 62.1402
scale = Vector2(0.09, -0.3)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_sckd6")
text = "Range"

[node name="Upgrade3" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_06jtv")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade3"]
position = Vector2(6.55356, 20.0094)

[node name="p" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade3"]
layout_mode = 0
offset_left = 5.0048
offset_top = 11.0515
offset_right = 23.0048
offset_bottom = 29.0515
scale = Vector2(0.192332, -0.571021)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_sckd6")
theme_override_font_sizes/font_size = 15
text = "20
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D2" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade3"]
position = Vector2(5.6001, 21.1631)
rotation = -0.174533
scale = Vector2(0.005, -0.005)
texture = ExtResource("8_etxti")

[node name="n" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade3"]
layout_mode = 0
offset_left = 2.44686
offset_top = 39.1402
offset_right = 89.4469
offset_bottom = 65.1402
scale = Vector2(0.09, -0.3)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_sckd6")
text = "Fire Rate"

[node name="Special" type="HBoxContainer" parent="UpgradeNode/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.4761
offset_top = -30.1646
offset_right = 13.5239
offset_bottom = 9.83535
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.790851, 0.406084)
pivot_offset = Vector2(21.8789, 20.3065)

[node name="Scrap" type="Button" parent="UpgradeNode/Panel/Special"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_j5ckj")
theme_override_styles/hover = SubResource("StyleBoxFlat_br7va")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r7p8p")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/Special/Scrap"]
position = Vector2(5.98584, 21.5685)
rotation = 3.14159
scale = Vector2(0.0139649, 0.0460245)
texture = ExtResource("6_63ttp")

[node name="p" type="Label" parent="UpgradeNode/Panel/Special/Scrap"]
layout_mode = 0
offset_left = 4.58715
offset_top = 9.80733
offset_right = 22.5871
offset_bottom = 27.8073
scale = Vector2(0.185449, -0.556406)
theme_override_colors/font_color = Color(0.740092, 0.81577, 0.9412, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_sckd6")
theme_override_font_sizes/font_size = 15
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fire" type="Button" parent="UpgradeNode/Panel/Special"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_y4p86")
theme_override_styles/hover = SubResource("StyleBoxFlat_yx1fn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_edu57")
theme_override_styles/disabled = SubResource("StyleBoxFlat_efktd")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/Special/Fire"]
position = Vector2(6.23743, 20.0094)
rotation = 3.14159
scale = Vector2(-0.0155199, 0.0477774)
texture = ExtResource("7_kagf0")

[node name="TimerNode" type="Node" parent="."]

[node name="AttackTimer" type="ProgressBar" parent="TimerNode"]
visible = false
offset_left = -25.0
offset_top = 30.0
offset_right = 25.0
offset_bottom = 35.0
pivot_offset = Vector2(26, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_2niu2")
theme_override_styles/fill = SubResource("StyleBoxFlat_2n770")
value = 10.0
fill_mode = 1
show_percentage = false
script = ExtResource("6_stewh")

[node name="Timer" type="Timer" parent="TimerNode/AttackTimer"]
wait_time = 2.0
one_shot = true

[node name="regenTimer" type="Timer" parent="TimerNode"]
wait_time = 0.5
autostart = true

[node name="HealthComponent" type="Node" parent="."]

[node name="healthBar" type="ProgressBar" parent="HealthComponent"]
offset_left = -26.0
offset_top = -49.0
offset_right = 24.0
offset_bottom = -45.0
pivot_offset = Vector2(26, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_440rt")
theme_override_styles/fill = SubResource("StyleBoxFlat_w7gv6")
value = 100.0
show_percentage = false
script = ExtResource("9_b1jgs")

[connection signal="input_event" from="." to="." method="_click_tower"]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Upgrade1" to="." method="_on_upgrade_1_pressed" binds= ["\"UpgradeNode/Panel/HBox/Upgrade1/p\""]]
[connection signal="mouse_entered" from="UpgradeNode/Panel/HBox/Upgrade2" to="." method="_on_upgrade_2_mouse_entered"]
[connection signal="mouse_exited" from="UpgradeNode/Panel/HBox/Upgrade2" to="." method="_on_upgrade_2_mouse_exited"]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Upgrade2" to="." method="_on_upgrade_2_pressed" binds= ["\"UpgradeNode/Panel/HBox/Upgrade2/p\""]]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Upgrade3" to="." method="_on_upgrade_3_pressed" binds= ["\"UpgradeNode/Panel/HBox/Upgrade3/p\""]]
[connection signal="pressed" from="UpgradeNode/Panel/Special/Scrap" to="." method="scrap"]
[connection signal="gui_input" from="UpgradeNode/Panel/Special/Fire" to="." method="fire"]
[connection signal="timeout" from="TimerNode/AttackTimer/Timer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="TimerNode/regenTimer" to="." method="_on_regen_timer_timeout"]
